--- a/index.html
+++ b/index.html
@@ -9,19 +9,30 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="display"></div>
+      <div class="display">
+        <p></p>
+        <h1></h1>
+      </div>
       <div class="buttons">
-        <button class="deleters" id="backspace">DEL</button
-        ><button class="deleters" id="clear">CE</button
-        ><button id="operation">%</button><button id="operation">/</button
-        ><button id="number">7</button><button id="number">8</button
-        ><button id="number">9</button><button id="operation">X</button
-        ><button id="number">4</button><button id="number">5</button
-        ><button id="number">6</button><button id="operation">+</button
-        ><button id="number">1</button><button id="number">2</button
-        ><button id="number">3</button><button id="operation">-</button
-        ><button id="number">0</button><button id="number">.</button
-        ><button id="equals">=</button>
+        <button class="deleters backspace" id="backspace">DEL</button
+        ><button class="deleters clear" id="clear">CE</button
+        ><button class="negative" data-value="negative">-/+</button
+        ><button class="operation" data-operation="division">/</button
+        ><button class="number" data-value="7">7</button
+        ><button class="number" data-value="8">8</button
+        ><button class="number" data-value="9">9</button
+        ><button class="operation" data-operation="multiplication">X</button
+        ><button class="number" data-value="4">4</button
+        ><button class="number" data-value="5">5</button
+        ><button class="number" data-value="6">6</button
+        ><button class="operation" data-operation="addition">+</button
+        ><button class="number" data-value="1">1</button
+        ><button class="number" data-value="2">2</button
+        ><button class="number" data-value="3">3</button
+        ><button class="operation" data-operation="subtraction">-</button
+        ><button class="number" data-value="0">0</button
+        ><button class="number" data-value=".">.</button
+        ><button class="equals">=</button>
       </div>
     </div>
     <script src="app.js"></script>
