--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         ><button class="equals">=</button>
       </div>
     </div>
+    <p class="footer">
+      <span><i class="fa-brands fa-github-square"></i></span>
+      Made by OdeeyuhLog
+    </p>
     <script src="app.js"></script>
+    <script
+      src="https://kit.fontawesome.com/4134a85b77.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
