Add functionality which disables period button if there is already a period in the input.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         ><button class="number" data-value="3">3</button
         ><button class="operation" data-operation="subtraction">-</button
         ><button class="number" data-value="0">0</button
-        ><button class="number" data-value=".">.</button
+        ><button class="dot" data-value=".">.</button
         ><button class="equals">=</button>
       </div>
     </div>
